# apple-ii-orchard

./: .gitattributes  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml  resume-prompt.md
apple-panic/: Walkthrough.md
cpm-investigation/: analyze_sysimg.py  build_dsk.py  check_layout.py  compare_routines.py  detect_order.py  disasm_223_linear.txt  dsk_compare.py  emu_softcard.py  emu_softcard_full.py  emu_softcard_realmap.py  emu_softcard_v2.py  extract_bios.py  extract_loader.py  extract_p6_rom.py  find_223_layout.py  find_bios.py  gen_220_bios.py  gen_220_bootloader.py  gen_220_sysimg.py  gen_223_bios.py  gen_223_callbacks.py  gen_223_sysimg.py  gen_rwts_220_asm.py  gen_rwts_asm.py  make_compilable.py  pack_dsk.py  reconstruct_staging.py  roundtrip_harness.py  sector_map.py  videx_rom24.cfg  videx_rom24.s
cpm_pipeline/: README.md  __init__.py  assemble.py  chunk_map.py  cli.py  cold_boot_trace.py  disk_format.py  generate.py  handoff.py  loader_trace.py  reconstruct.py  version_delta.py
disasm6502/: README.md  __init__.py  symbols.py  walker.py
disasm_z80/: README.md  __init__.py  cli.py  formatter.py  opcodes.py  symbols.py  walker.py
docs/: CPM220_BIOS.asm  CPM220_BootLoader.asm  CPM220_InstallFragments.asm  CPM220_RWTS.asm  CPM220_SystemImage.asm  CPM223_BIOS.asm  CPM223_BootLoader.asm  CPM223_DiskCallbacks.asm  CPM223_InstallFragments.asm  CPM223_RWTS.asm  CPM223_SystemImage.asm  CPM_BootLoader.md  CPM_BootTrace.md  CPM_DiskSectorMap.md  CPM_Filesystem.md  CPM_PIPELINE_ROADMAP.md  CPM_SoftCard_RealMap_Findings.md  CPM_Videx_Difference.md
(+561 files in other folders)
